package domain.entities.benutzer;

public interface Machbar {
    public boolean istGetan();
}
